@@ -1,3 +1,9 @@
+2005-07-07  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
+
+	* .htaccass:
+	Removed page against software patents - EU rejected these patents
+	for now
+
 2005-07-03  Uwe Pross  <keinFruehstuecksfleisch@gmx.net>
 
 	* .htaccass:
